sections/section-030/module-01/playground/examples/cases/c3-virtualservice-httpbin-v1.yaml
# Case 3 helper: send all httpbin traffic to subset v1 (3 pods).
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin
  namespace: bookinfo
spec:
  hosts:
  - httpbin
  http:
  - route:
    - destination:
        host: httpbin
        subset: v1
